# electronics-shop-project

./: pyproject.toml
homework-2/: main.py
homework1/: main.py
src/: item.py
tests/: conftest.py  test_item.py
