[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "electronics_shop_project"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"
iniconfig = "^2.0.0"
packaging = "^23.1"
pip	= "^23.1.2"
pluggy = "^1.2.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
setuptools = "^67.8.0"
wheel = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
